fix focus outline being cropped

--- a/src/styles/components/_delete.scss
+++ b/src/styles/components/_delete.scss
@@ -8,5 +8,4 @@
   pointer-events: var(--pointer-events, auto);
   background-color: rgba(255, 0, 0, 0.4);
   border-radius: 0 10px 10px 0;
-  outline-offset: 2px;
 }
