--- a/src/styles/components/_task.scss
+++ b/src/styles/components/_task.scss
@@ -3,7 +3,7 @@
   align-items: flex-start;
   grid-template-columns: repeat(auto-fit, minmax($min-width, 1fr));
   gap: $gap-md;
-  &__set-container {
+  &__set {
     display: flex;
     align-items: center;
     gap: $gap-sm;
@@ -55,7 +55,6 @@
       height: fit-content;
       background-color: rgba(0, 0, 0, 0.1);
       border-radius: $border-radius-md;
-      overflow: hidden;
       cursor: pointer;
 
       @include respond(mobile) {
